compiler/testData/diagnostics/tests/exceptions/incorrectCallOnILT.kt
// RUN_PIPELINE_TILL: FRONTEND
// ISSUE: KT-62306

fun main() {
    1.<!NONE_APPLICABLE, NO_VALUE_FOR_PARAMETER!>plus<!>()
}

/* GENERATED_FIR_TAGS: functionDeclaration */
